--- a/src/app/components/complaint-dialog/complaint-dialog.component.scss
+++ b/src/app/components/complaint-dialog/complaint-dialog.component.scss
@@ -14,6 +14,20 @@
     }
   }
 
+  ::ng-deep .mat-horizontal-stepper-header-container {
+    display: none !important;
+  }
+
+  ::ng-deep .mat-step-header:hover,
+  ::ng-deep .mat-step-header {
+    background: transparent !important;
+  }
+
+  .mat-stepper-horizontal,
+  .mat-stepper-vertical {
+    background: transparent !important;
+  }
+
   ::ng-deep .mat-form-field-appearance-outline .mat-form-field-wrapper {
     margin: 0;
   }
@@ -50,6 +64,10 @@
     }
   }
 
+  .stepconts {
+    margin-top: 20px;
+  }
+
   .anon {
     margin-top: 10px;
 
@@ -68,14 +86,25 @@
     }
   }
 
-  form {
-    margin-top: 20px;
-  }
-
   .editor-form {
     margin-bottom: 20px;
     background: #ffffff;
     border-radius: 5px;
+  }
+
+  .publishas {
+    display: flex;
+    align-items: center;
+    justify-content: flex-start;
+    font-size: 9pt;
+
+    * {
+      margin: 0;
+    }
+
+    button {
+      margin-left: 5px;
+    }
   }
 
   .ctrls {
@@ -106,10 +135,81 @@
     }
   }
 
+  .ctrlsmid {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin-bottom: 20px;
+  }
+
   .file-hldr {
     font-weight: bold;
     font-style: italic;
     margin: 0 0 20px 0;
     text-align: center;
+
+    .imgfile {
+      .filectrls {
+        display: flex;
+        align-items: center;
+        justify-content: flex-start;
+        margin-bottom: 10px;
+
+        * {
+          margin: 0;
+        }
+
+        img {
+          width: 40px;
+          height: 40px;
+          float: left;
+          margin-right: 10px;
+        }
+
+        button {
+          margin-right: 20px;
+        }
+      }
+    }
+
+    .imgfile:not(:first-child) {
+      margin-top: 20px;
+    }
+
+    .set-6:nth-child(odd) {
+      padding-right: 10px;
+    }
+
+    .set-6:nth-child(even) {
+      padding-left: 10px;
+    }
+  }
+
+  .wicon {
+    // width: 100%;
+    // padding: 20px !important;
+    width: 100px;
+    height: 100px;
+    display: block;
+    align-items: center;
+    justify-content: center;
+    background: #00031d;
+    color: #ffffff;
+    border-radius: 100%;
+
+    mat-icon {
+      color: #ffffff;
+      font-size: 30pt;
+      // margin-bottom: 10px;
+    }
+  }
+
+  .succes {
+    margin-top: 40px;
+    text-align: center;
+
+    h4 {
+      margin-bottom: 5px;
+    }
   }
 }
