--- a/src/app/pando/users-list/users-list.component.scss
+++ b/src/app/pando/users-list/users-list.component.scss
@@ -1,6 +1,8 @@
 :host {
-  padding: 40px;
+  padding: 40px 40px 90px 40px;
   margin-top: 70px;
+  float: left;
+  width: 100%;
 
   .userlist {
     -webkit-box-shadow: 0px 1px 4px 0px rgba(0, 0, 0, 0.5);
