--- a/src/app/testimonials/testimonials.component.html
+++ b/src/app/testimonials/testimonials.component.html
@@ -2,7 +2,7 @@
   <div class="set-4">
     <mat-form-field appearance="outline">
       <mat-label>Búscar...</mat-label>
-      <input matInput placeholder="Ej: Andrea" (keyup)="applyFilter($event)">
+      <input matInput placeholder="Ej: Andrea" (keyup)="applyFilter($event)" disabled>
       <button type="button" matSuffix>
         <mat-icon>cancel</mat-icon>
       </button>
