--- a/src/app/complaints/single-complaint/single-complaint.component.scss
+++ b/src/app/complaints/single-complaint/single-complaint.component.scss
@@ -1,4 +1,5 @@
 :host {
+  .fixdesk{
   width: 100%;
   float: left;
   padding: 40px;
@@ -151,12 +152,159 @@
     }
   }
 }
-
-:host(.fixmobile) {
-  margin: 0 !important;
-  width: 100%;
-
-  .crdlst {
-    width: 100% !important;
+  .fixmobile{
+    width: 100%;
+    float: left;
+    padding: 0px;
+    margin-top: 0px;
+    margin-bottom: 30px;
+  
+    mat-card:not(:last-child) {
+      margin-bottom: 15px;
+    }
+  
+    mat-card {
+      padding: 0;
+    }
+  
+    .crdlst {
+      width: 100%;
+      padding: 20px;
+    }
+  
+    .crdh {
+      display: flex;
+      align-items: center;
+      justify-content: flex-start;
+      padding: 15px;
+      border-bottom: 1px solid rgba($color: #000000, $alpha: 0.1);
+      background: #00031d;
+      color: rgba($color: #ffffff, $alpha: 0.7);
+  
+      * {
+        margin: 0;
+      }
+  
+      .avatar {
+        width: 40px;
+        height: 40px;
+        border-radius: 100%;
+        display: block;
+        background: blueviolet;
+        margin-right: 20px;
+        overflow: hidden;
+      }
+  
+      .dates {
+        font-size: 9pt;
+      }
+    }
+  
+    .crddsc {
+      padding: 5px 15px 15px 15px;
+      background: #00031d;
+      color: rgba($color: #ffffff, $alpha: 0.7);
+      font-size: 11pt;
+    }
+  
+    .crdvp {
+      height: 300px;
+      min-height: 300px;
+      max-height: 300px;
+      overflow: hidden;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      background: #dff1e7;
+  
+      img.full {
+        width: 100%;
+      }
+    }
+  
+    .crdft {
+      display: flex;
+      align-items: center;
+      justify-content: flex-end;
+      padding: 15px;
+      border-top: 1px solid rgba($color: #000000, $alpha: 0.1);
+      background: #dff1e7;
+  
+      * {
+        margin: 0;
+      }
+  
+      .types {
+        display: flex;
+        align-items: center;
+        justify-content: flex-start;
+        font-size: 9pt;
+  
+        mat-icon {
+          margin-right: 5px;
+          font-size: 9pt;
+        }
+      }
+  
+      .ctrls {
+        display: flex;
+        align-items: center;
+        justify-content: flex-end;
+  
+        button {
+          margin-left: 10px;
+  
+          mat-icon {
+            font-size: 14pt;
+          }
+        }
+  
+        button:first-child {
+          margin-left: 0;
+        }
+      }
+    }
+  
+    .crdcom {
+      display: flex;
+      align-items: center;
+      padding: 15px;
+      border-top: 1px solid rgba($color: #000000, $alpha: 0.1);
+      background: #dff1e7;
+  
+      .avatar {
+        width: 35px;
+        height: 35px;
+        border-radius: 100%;
+        overflow: hidden;
+        display: block;
+        background: purple;
+        margin-right: 10px;
+      }
+  
+      input {
+        width: 90%;
+        height: 35px;
+        border-radius: 20px;
+        background: #f1f1f1;
+        padding: 0 15px;
+        border: 1px solid rgba($color: #000000, $alpha: 0.1);
+        margin-left: 10px;
+      }
+    }
+  
+    .comlst {
+      padding: 15px;
+      background: #dff1e7;
+    }
+  
+    .loading {
+      mat-spinner {
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+      }
+    }
   }
 }
