styles testimony mobile

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -80,6 +80,12 @@
         <!-- <button type="button" (click)="linkMe('documents')">
           <mat-icon>description</mat-icon> <span>Mis Documentos</span>
         </button> -->
+        <button type="button" (click)="linkMe('complaint')">
+          <mat-icon>warning</mat-icon> <span>Denuncias</span>
+        </button>
+        <button type="button" (click)="linkMe('testimony')">
+          <mat-icon>announcement</mat-icon> <span>Testimonios</span>
+        </button>
         <button type="button" (click)="linkMe('configuration')">
           <mat-icon>settings</mat-icon> <span>Configuración</span>
         </button>
