--- a/src/app/testimonials/testimonials.component.html
+++ b/src/app/testimonials/testimonials.component.html
@@ -41,7 +41,7 @@
             <small>Abrir aquí</small>
           </button>
 
-          <button mat-menu-item type="button">
+          <button mat-menu-item type="button" (click)="popSingleComplaint(element._id)">
             <mat-icon>launch</mat-icon>
             <small>Abrir en ventana</small>
           </button>
