add cover video

--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -56,7 +56,7 @@
 
   <div class="set-12 videohldr">
     &nbsp;
-    <!-- <iframe width="854" height="480" src="https://www.youtube.com/embed/3abjA6X8agw" frameborder="0" allowfullscreen></iframe> -->
+    <iframe width="854" height="480" src="https://www.youtube.com/embed/3abjA6X8agw" frameborder="0" allowfullscreen></iframe>
   </div>
 
 
