--- a/src/app/testimonials/single-testimonial/single-testimonial.component.html
+++ b/src/app/testimonials/single-testimonial/single-testimonial.component.html
@@ -10,24 +10,24 @@
           <button type="button" class="avatar"></button>
           <div>
             <p>
-              <small *ngIf="!complaint?.isAnonymous">
-                {{complaint?.createdBy.firstname}} {{complaint?.createdBy.lastname}}
+              <small *ngIf="!testimony?.isAnonymous">
+                {{testimony?.createdBy.firstname}} {{testimony?.createdBy.lastname}}
               </small>
-              <small *ngIf="complaint?.isAnonymous">Anónimo</small>
+              <small *ngIf="testimony?.isAnonymous">Anónimo</small>
             </p>
             <p class="dates">
-              <small>{{complaint?.createdAt | date: 'mediumDate'}} - {{complaint?.createdAt | date: 'mediumTime'}}</small>
+              <small>{{testimony?.createdAt | date: 'mediumDate'}} - {{testimony?.createdAt | date: 'mediumTime'}}</small>
             </p>
           </div>
         </div>
   
         <div class="set-12 crddsc">
-          <div class="set-12" [innerHTML]="utilityService.truncateHTML(complaint?.description)"></div>
+          <div class="set-12" [innerHTML]="utilityService.truncateHTML(testimony?.description)"></div>
         </div>
   
         <div class="set-12 crdvp">
-          <img [src]="complaint?.images[0]" alt="" class="full" *ngIf="complaint?.images.length != 0">
-          <img src="../../assets/images/mexicolectivo-small-blue.png" alt="" *ngIf="complaint?.images.length == 0">
+          <img [src]="testimony?.images[0]" alt="" class="full" *ngIf="testimony?.images.length != 0">
+          <img src="../../assets/images/mexicolectivo-small-blue.png" alt="" *ngIf="testimony?.images.length == 0">
         </div>
   
         <div class="set-12 crdft">
@@ -45,7 +45,7 @@
             <button type="button" matTooltip="Compartir" matTooltipClass="tooltip" (click)="shareCard()">
               <mat-icon>share</mat-icon>
             </button>
-            <button type="button" matTooltip="Votar" matTooltipClass="tooltip" (click)="openVoteDialog(complaint)">
+            <button type="button" matTooltip="Votar" matTooltipClass="tooltip" (click)="openVoteDialog(testimony)">
               <mat-icon>star</mat-icon>
             </button>
           </div>
@@ -56,12 +56,12 @@
             <button type="button" class="avatar"></button>
           </div>
           <div class="set-11">
-            <input type="text" placeholder="Escribe un mensaje..." (keyup)="postComment($event, complaint)">
+            <input type="text" placeholder="Escribe un mensaje..." (keyup)="postComment($event, testimony)">
           </div>
         </div>
   
-        <div class="set-12 comlst" *ngIf="complaint?.comments.length != 0">
-          <div class="set-12" *ngFor="let comment of complaint?.comments">{{comment}}</div>
+        <div class="set-12 comlst" *ngIf="testimony?.comments.length != 0">
+          <div class="set-12" *ngFor="let comment of testimony?.comments">{{comment}}</div>
         </div>
       </mat-card>
     </div>
@@ -75,24 +75,24 @@
           <button type="button" class="avatar"></button>
           <div>
             <p>
-              <small *ngIf="!complaint?.isAnonymous">
-                {{complaint?.createdBy.firstname}} {{complaint?.createdBy.lastname}}
+              <small *ngIf="!testimony?.isAnonymous">
+                {{testimony?.createdBy.firstname}} {{testimony?.createdBy.lastname}}
               </small>
-              <small *ngIf="complaint?.isAnonymous">Anónimo</small>
+              <small *ngIf="testimony?.isAnonymous">Anónimo</small>
             </p>
             <p class="dates">
-              <small>{{complaint?.createdAt | date: 'mediumDate'}} - {{complaint?.createdAt | date: 'mediumTime'}}</small>
+              <small>{{testimony?.createdAt | date: 'mediumDate'}} - {{testimony?.createdAt | date: 'mediumTime'}}</small>
             </p>
           </div>
         </div>
   
         <div class="set-12 crddsc">
-          <div class="set-12" [innerHTML]="utilityService.truncateHTML(complaint?.description)"></div>
+          <div class="set-12" [innerHTML]="utilityService.truncateHTML(testimony?.description)"></div>
         </div>
   
         <div class="set-12 crdvp">
-          <img [src]="complaint?.images[0]" alt="" class="full" *ngIf="complaint?.images.length != 0">
-          <img src="../../assets/images/mexicolectivo-small-blue.png" alt="" *ngIf="complaint?.images.length == 0">
+          <img [src]="testimony?.images[0]" alt="" class="full" *ngIf="testimony?.images.length != 0">
+          <img src="../../assets/images/mexicolectivo-small-blue.png" alt="" *ngIf="testimony?.images.length == 0">
         </div>
   
         <div class="set-12 crdft">
@@ -110,7 +110,7 @@
             <button type="button" matTooltip="Compartir" matTooltipClass="tooltip" (click)="shareCard()">
               <mat-icon>share</mat-icon>
             </button>
-            <button type="button" matTooltip="Votar" matTooltipClass="tooltip" (click)="openVoteDialog(complaint)">
+            <button type="button" matTooltip="Votar" matTooltipClass="tooltip" (click)="openVoteDialog(testimony)">
               <mat-icon>star</mat-icon>
             </button>
           </div>
@@ -121,12 +121,12 @@
             <button type="button" class="avatar"></button>
           </div>
           <div class="set-11">
-            <input type="text" placeholder="Escribe un mensaje..." (keyup)="postComment($event, complaint)">
+            <input type="text" placeholder="Escribe un mensaje..." (keyup)="postComment($event, testimony)">
           </div>
         </div>
   
-        <div class="set-12 comlst" *ngIf="complaint?.comments.length != 0">
-          <div class="set-12" *ngFor="let comment of complaint?.comments">{{comment}}</div>
+        <div class="set-12 comlst" *ngIf="testimony?.comments.length != 0">
+          <div class="set-12" *ngFor="let comment of testimony?.comments">{{comment}}</div>
         </div>
       </mat-card>
     </div>
