--- a/src/app/testimonials/testimonials.component.html
+++ b/src/app/testimonials/testimonials.component.html
@@ -1,61 +1,182 @@
-<div class="set-12">
-  <div class="set-4">
-    <mat-form-field appearance="outline">
-      <mat-label>Búscar...</mat-label>
-      <input matInput placeholder="Ej: Andrea" (keyup)="applyFilter($event)" disabled>
-      <button type="button" matSuffix>
-        <mat-icon>cancel</mat-icon>
-      </button>
-    </mat-form-field>
-  </div>
-  <div class="set-8">&nbsp;</div>
+<div class="set-12 page loading" *ngIf="!isDataAvailable">
+  <mat-spinner color="primary"></mat-spinner>
 </div>
 
-<div class="set-12">
-  <table mat-table [dataSource]="dataSource">
-    <ng-container matColumnDef="author">
-      <th mat-header-cell *matHeaderCellDef>Autor</th>
-      <td mat-cell *matCellDef="let element"> {{element.createdBy.firstname}} </td>
-    </ng-container>
-
-    <ng-container matColumnDef="title">
-      <th mat-header-cell *matHeaderCellDef>Título</th>
-      <td mat-cell *matCellDef="let element"> {{element.name || 'NA'}} </td>
-    </ng-container>
-
-    <ng-container matColumnDef="date">
-      <th mat-header-cell *matHeaderCellDef>Alta</th>
-      <td mat-cell *matCellDef="let element"> {{element.createdAt | date: 'mediumDate'}} </td>
-    </ng-container>
-
-    <ng-container matColumnDef="menu">
-      <th mat-header-cell *matHeaderCellDef></th>
-      <td mat-cell *matCellDef="let element">
-        <button type="button" [matMenuTriggerFor]="menu">
-          <mat-icon>more_vert</mat-icon>
+<!--Desk-->
+<div *ngIf="isDataAvailable && !isMobile" [class.fixdesk]="!isMobile">
+  <div class="set-12">
+    <div class="set-4">
+      <mat-form-field appearance="outline">
+        <mat-label>Búscar...</mat-label>
+        <input
+          matInput
+          placeholder="Ej: Andrea"
+          (keyup)="applyFilter($event)"
+          disabled
+        />
+        <button type="button" matSuffix>
+          <mat-icon>cancel</mat-icon>
         </button>
+      </mat-form-field>
+    </div>
+    <div class="set-8">&nbsp;</div>
+  </div>
 
-        <mat-menu #menu="matMenu">
-          <button mat-menu-item type="button" (click)="attendComplaint(element)">
-            <mat-icon>headset_mic</mat-icon>
-            <small>Abrir aquí</small>
+  <div class="set-12">
+    <table mat-table [dataSource]="dataSource">
+      <ng-container matColumnDef="author">
+        <th mat-header-cell *matHeaderCellDef>Autor</th>
+        <td mat-cell *matCellDef="let element">
+          {{ element.createdBy.firstname }}
+        </td>
+      </ng-container>
+
+      <ng-container matColumnDef="title">
+        <th mat-header-cell *matHeaderCellDef>Título</th>
+        <td mat-cell *matCellDef="let element">{{ element.title || "NA" }}</td>
+      </ng-container>
+
+      <ng-container matColumnDef="date">
+        <th mat-header-cell *matHeaderCellDef>Alta</th>
+        <td mat-cell *matCellDef="let element">
+          {{ element.createdAt | date : "mediumDate" }}
+        </td>
+      </ng-container>
+
+      <ng-container matColumnDef="menu">
+        <th mat-header-cell *matHeaderCellDef></th>
+        <td mat-cell *matCellDef="let element">
+          <button type="button" [matMenuTriggerFor]="menu">
+            <mat-icon>more_vert</mat-icon>
           </button>
 
-          <button mat-menu-item type="button" (click)="popSingleComplaint(element._id)">
-            <mat-icon>launch</mat-icon>
-            <small>Abrir en ventana</small>
-          </button>
+          <mat-menu #menu="matMenu">
+            <button
+              mat-menu-item
+              type="button"
+              (click)="attendTestimony(element)"
+            >
+              <mat-icon>headset_mic</mat-icon>
+              <small>Abrir aquí</small>
+            </button>
 
-          <button mat-menu-item type="button">
-            <mat-icon>cancel</mat-icon>
-            <small>Eliminar</small>
-          </button>
-        </mat-menu>
-      </td>
-    </ng-container>
+            <button
+              mat-menu-item
+              type="button"
+              (click)="popSingleTestimony(element._id)"
+            >
+              <mat-icon>launch</mat-icon>
+              <small>Abrir en ventana</small>
+            </button>
 
-    <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-    <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
-  </table>
-  <mat-paginator #paginator [pageSizeOptions]="[20, 40, 60, 80, 100]"></mat-paginator>
+            <button
+              mat-menu-item
+              type="button"
+              (click)="killTestimony(element._id)"
+            >
+              <mat-icon>cancel</mat-icon>
+              <small>Eliminar</small>
+            </button>
+          </mat-menu>
+        </td>
+      </ng-container>
+
+      <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+      <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
+    </table>
+    <mat-paginator
+      #paginator
+      [pageSizeOptions]="[20, 40, 60, 80, 100]"
+    ></mat-paginator>
+  </div>
 </div>
+
+<!--Mobile-->
+<div *ngIf="isDataAvailable && isMobile" [class.fixmobile]="isMobile">
+  <div class="set-12">
+    <div class="set-4">
+      <mat-form-field appearance="outline">
+        <mat-label>Búscar...</mat-label>
+        <input
+          matInput
+          placeholder="Ej: Andrea"
+          (keyup)="applyFilter($event)"
+          disabled
+        />
+        <button type="button" matSuffix>
+          <mat-icon>cancel</mat-icon>
+        </button>
+      </mat-form-field>
+    </div>
+    <div class="set-8">&nbsp;</div>
+  </div>
+
+  <div class="set-12">
+    <table mat-table [dataSource]="dataSource">
+      <ng-container matColumnDef="author">
+        <th mat-header-cell *matHeaderCellDef>Autor</th>
+        <td mat-cell *matCellDef="let element">
+          {{ element.createdBy.firstname }}
+        </td>
+      </ng-container>
+
+      <ng-container matColumnDef="title">
+        <th mat-header-cell *matHeaderCellDef>Título</th>
+        <td mat-cell *matCellDef="let element">{{ element.title || "NA" }}</td>
+      </ng-container>
+
+      <ng-container matColumnDef="date">
+        <th mat-header-cell *matHeaderCellDef>Alta</th>
+        <td mat-cell *matCellDef="let element">
+          {{ element.createdAt | date : "mediumDate" }}
+        </td>
+      </ng-container>
+
+      <ng-container matColumnDef="menu">
+        <th mat-header-cell *matHeaderCellDef></th>
+        <td mat-cell *matCellDef="let element">
+          <button type="button" [matMenuTriggerFor]="menu">
+            <mat-icon>more_vert</mat-icon>
+          </button>
+
+          <mat-menu #menu="matMenu">
+            <button
+              mat-menu-item
+              type="button"
+              (click)="attendTestimony(element)"
+            >
+              <mat-icon>headset_mic</mat-icon>
+              <small>Abrir aquí</small>
+            </button>
+
+            <button
+              mat-menu-item
+              type="button"
+              (click)="popSingleTestimony(element._id)"
+            >
+              <mat-icon>launch</mat-icon>
+              <small>Abrir en ventana</small>
+            </button>
+
+            <button
+              mat-menu-item
+              type="button"
+              (click)="killTestimony(element._id)"
+            >
+              <mat-icon>cancel</mat-icon>
+              <small>Eliminar</small>
+            </button>
+          </mat-menu>
+        </td>
+      </ng-container>
+
+      <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+      <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
+    </table>
+    <mat-paginator
+      #paginator
+      [pageSizeOptions]="[20, 40, 60, 80, 100]"
+    ></mat-paginator>
+  </div>
+</div>
+
