--- a/src/app/complaints/complaints.component.html
+++ b/src/app/complaints/complaints.component.html
@@ -1,6 +1,6 @@
 <div class="set-12 page loading" *ngIf="!isDataAvailable">
   <mat-spinner color="primary"></mat-spinner>
-   
+
 </div>
 
 <!--Desk-->
@@ -9,12 +9,7 @@
     <div class="set-4">
       <mat-form-field appearance="outline">
         <mat-label>Búscar...</mat-label>
-        <input
-          matInput
-          placeholder="Ej: Andrea"
-          (keyup)="applyFilter($event)"
-          disabled
-        />
+        <input matInput placeholder="Ej: Andrea" (keyup)="applyFilter($event)" disabled />
         <button type="button" matSuffix>
           <mat-icon>cancel</mat-icon>
         </button>
@@ -28,7 +23,8 @@
       <ng-container matColumnDef="author">
         <th mat-header-cell *matHeaderCellDef>Autor</th>
         <td mat-cell *matCellDef="let element">
-          {{ element.createdBy.firstname }}
+          <span *ngIf="element?.createdBy?.firstname != null">{{ element?.createdBy?.firstname }}</span>
+          <span *ngIf="element?.createdBy?.firstname == null">Anónimo</span>
         </td>
       </ng-container>
 
@@ -52,29 +48,17 @@
           </button>
 
           <mat-menu #menu="matMenu">
-            <button
-              mat-menu-item
-              type="button"
-              (click)="attendComplaint(element)"
-            >
+            <button mat-menu-item type="button" (click)="attendComplaint(element)">
               <mat-icon>headset_mic</mat-icon>
               <small>Abrir aquí</small>
             </button>
 
-            <button
-              mat-menu-item
-              type="button"
-              (click)="popSingleComplaint(element._id)"
-            >
+            <button mat-menu-item type="button" (click)="popSingleComplaint(element._id)">
               <mat-icon>launch</mat-icon>
               <small>Abrir en ventana</small>
             </button>
 
-            <button
-              mat-menu-item
-              type="button"
-              (click)="killCompalint(element._id)"
-            >
+            <button mat-menu-item type="button" (click)="killCompalint(element._id)">
               <mat-icon>cancel</mat-icon>
               <small>Eliminar</small>
             </button>
@@ -85,10 +69,7 @@
       <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
       <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
     </table>
-    <mat-paginator
-      #paginator
-      [pageSizeOptions]="[20, 40, 60, 80, 100]"
-    ></mat-paginator>
+    <mat-paginator #paginator [pageSizeOptions]="[20, 40, 60, 80, 100]"></mat-paginator>
   </div>
 </div>
 
@@ -98,12 +79,7 @@
     <div class="set-4">
       <mat-form-field appearance="outline">
         <mat-label>Búscar...</mat-label>
-        <input
-          matInput
-          placeholder="Ej: Andrea"
-          (keyup)="applyFilter($event)"
-          disabled
-        />
+        <input matInput placeholder="Ej: Andrea" (keyup)="applyFilter($event)" disabled />
         <button type="button" matSuffix>
           <mat-icon>cancel</mat-icon>
         </button>
@@ -141,29 +117,17 @@
           </button>
 
           <mat-menu #menu="matMenu">
-            <button
-              mat-menu-item
-              type="button"
-              (click)="attendComplaint(element)"
-            >
+            <button mat-menu-item type="button" (click)="attendComplaint(element)">
               <mat-icon>headset_mic</mat-icon>
               <small>Abrir aquí</small>
             </button>
 
-            <button
-              mat-menu-item
-              type="button"
-              (click)="popSingleComplaint(element._id)"
-            >
+            <button mat-menu-item type="button" (click)="popSingleComplaint(element._id)">
               <mat-icon>launch</mat-icon>
               <small>Abrir en ventana</small>
             </button>
 
-            <button
-              mat-menu-item
-              type="button"
-              (click)="killCompalint(element._id)"
-            >
+            <button mat-menu-item type="button" (click)="killCompalint(element._id)">
               <mat-icon>cancel</mat-icon>
               <small>Eliminar</small>
             </button>
@@ -174,9 +138,6 @@
       <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
       <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
     </table>
-    <mat-paginator
-      #paginator
-      [pageSizeOptions]="[20, 40, 60, 80, 100]"
-    ></mat-paginator>
+    <mat-paginator #paginator [pageSizeOptions]="[20, 40, 60, 80, 100]"></mat-paginator>
   </div>
 </div>
