--- a/src/app/testimonials/testimonials.component.html
+++ b/src/app/testimonials/testimonials.component.html
@@ -8,12 +8,7 @@
     <div class="set-4">
       <mat-form-field appearance="outline">
         <mat-label>Búscar...</mat-label>
-        <input
-          matInput
-          placeholder="Ej: Andrea"
-          (keyup)="applyFilter($event)"
-          disabled
-        />
+        <input matInput placeholder="Ej: Andrea" (keyup)="applyFilter($event)" disabled />
         <button type="button" matSuffix>
           <mat-icon>cancel</mat-icon>
         </button>
@@ -27,13 +22,14 @@
       <ng-container matColumnDef="author">
         <th mat-header-cell *matHeaderCellDef>Autor</th>
         <td mat-cell *matCellDef="let element">
-          {{ element.createdBy.firstname }}
+          <span *ngIf="element?.createdBy?.firstname != null">{{ element?.createdBy?.firstname }}</span>
+          <span *ngIf="element?.createdBy?.firstname == null">Anónimo</span>
         </td>
       </ng-container>
 
       <ng-container matColumnDef="title">
         <th mat-header-cell *matHeaderCellDef>Título</th>
-        <td mat-cell *matCellDef="let element">{{ element.title || "NA" }}</td>
+        <td mat-cell *matCellDef="let element">{{ element?.title || "NA" }}</td>
       </ng-container>
 
       <ng-container matColumnDef="date">
@@ -51,29 +47,17 @@
           </button>
 
           <mat-menu #menu="matMenu">
-            <button
-              mat-menu-item
-              type="button"
-              (click)="attendTestimony(element)"
-            >
+            <button mat-menu-item type="button" (click)="attendTestimony(element)">
               <mat-icon>headset_mic</mat-icon>
               <small>Abrir aquí</small>
             </button>
 
-            <button
-              mat-menu-item
-              type="button"
-              (click)="popSingleTestimony(element._id)"
-            >
+            <button mat-menu-item type="button" (click)="popSingleTestimony(element._id)">
               <mat-icon>launch</mat-icon>
               <small>Abrir en ventana</small>
             </button>
 
-            <button
-              mat-menu-item
-              type="button"
-              (click)="killTestimony(element._id)"
-            >
+            <button mat-menu-item type="button" (click)="killTestimony(element._id)">
               <mat-icon>cancel</mat-icon>
               <small>Eliminar</small>
             </button>
@@ -84,10 +68,7 @@
       <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
       <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
     </table>
-    <mat-paginator
-      #paginator
-      [pageSizeOptions]="[20, 40, 60, 80, 100]"
-    ></mat-paginator>
+    <mat-paginator #paginator [pageSizeOptions]="[20, 40, 60, 80, 100]"></mat-paginator>
   </div>
 </div>
 
@@ -97,12 +78,7 @@
     <div class="set-4">
       <mat-form-field appearance="outline">
         <mat-label>Búscar...</mat-label>
-        <input
-          matInput
-          placeholder="Ej: Andrea"
-          (keyup)="applyFilter($event)"
-          disabled
-        />
+        <input matInput placeholder="Ej: Andrea" (keyup)="applyFilter($event)" disabled />
         <button type="button" matSuffix>
           <mat-icon>cancel</mat-icon>
         </button>
@@ -140,29 +116,17 @@
           </button>
 
           <mat-menu #menu="matMenu">
-            <button
-              mat-menu-item
-              type="button"
-              (click)="attendTestimony(element)"
-            >
+            <button mat-menu-item type="button" (click)="attendTestimony(element)">
               <mat-icon>headset_mic</mat-icon>
               <small>Abrir aquí</small>
             </button>
 
-            <button
-              mat-menu-item
-              type="button"
-              (click)="popSingleTestimony(element._id)"
-            >
+            <button mat-menu-item type="button" (click)="popSingleTestimony(element._id)">
               <mat-icon>launch</mat-icon>
               <small>Abrir en ventana</small>
             </button>
 
-            <button
-              mat-menu-item
-              type="button"
-              (click)="killTestimony(element._id)"
-            >
+            <button mat-menu-item type="button" (click)="killTestimony(element._id)">
               <mat-icon>cancel</mat-icon>
               <small>Eliminar</small>
             </button>
@@ -173,10 +137,6 @@
       <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
       <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
     </table>
-    <mat-paginator
-      #paginator
-      [pageSizeOptions]="[20, 40, 60, 80, 100]"
-    ></mat-paginator>
+    <mat-paginator #paginator [pageSizeOptions]="[20, 40, 60, 80, 100]"></mat-paginator>
   </div>
 </div>
-
