--- a/src/app/testimonials/single-testimonial/single-testimonial.component.scss
+++ b/src/app/testimonials/single-testimonial/single-testimonial.component.scss
@@ -165,11 +165,12 @@
     
       mat-card {
         padding: 0;
+        border-radius: 0px;
       }
     
       .crdlst {
         width: 100%;
-        padding: 20px;
+        padding: 0px;
       }
     
       .crdh {
